src/test/deca/syntax/valid/synt/elseIf.deca
{
boolean x;
boolean y;
if (x) {
	x = false;
} else if (y) {
	y = false;
}
}
// @expected_tree X
