src/test/deca/syntax/invalid/synt/declarationInWhile.deca
// @expected_output deca:4:12:
{
    while(true) {
        int x;
    }
}
